# dnsync

./: .coderabbit.yaml  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  agents.md  bacon-check.toml  bacon-pedantic.toml  bacon-run  bacon-testing.toml  bacon.toml  update.sh
.github/PULL_REQUEST_TEMPLATE/: new-vendor.md
.github/workflows/: binary.yml  rust.yml
deploy/: dnsync.service  docker-compose.yml
docs/: architecture.md  dns-query-command.md  dns-sync-ip-mapping.md  function-placement-guide.md  new-vendor.md  refactor-plan.md  validation_endpoint_analysis.md  vendor-mapping.md
docs/adr/: 0001-general-dns-control-plane.md
src/: client.rs  dns.rs  error.rs  formatter.rs  lib.rs  main.rs  policy.rs  response.rs  server.rs
src/cli/: commands.rs  completions.rs  interactive.rs  mod.rs  query.rs  records.rs  runner.rs  tests.rs
src/cli/dispatch/: client_cmd.rs  config_cmd.rs  cross_server.rs  daemon_cmd.rs  logs_time.rs  mod.rs  tests.rs
src/cli/interactive/: display.rs  mod.rs  prompts.rs  wizards.rs
src/cli/query/: args.rs  execute.rs  mod.rs  output_json.rs  output_table.rs  parse.rs  plan.rs  result.rs  run.rs
src/control_plane/: app.rs  config.rs  mod.rs  policy.rs  sync.rs  transfer.rs
src/control_plane/config/: app_config.rs  mod.rs  persist.rs  render.rs  resolve.rs  secure_io.rs  server.rs  types.rs  validate.rs
src/control_plane/policy/: mod.rs  tests.rs
src/control_plane/sync/: apply.rs  ledger.rs  mod.rs  plan.rs  reconcile.rs  render.rs  run.rs  types.rs
src/core/: error.rs  mod.rs  redaction.rs  secret.rs
src/core/dns/: access_lists.rs  cache.rs  capabilities.rs  logs.rs  mod.rs  names.rs  records.rs  resolver.rs  responses.rs  service.rs  settings.rs  stats.rs  util.rs  validation.rs  zones.rs
src/daemon/: commands.rs  health.rs  mod.rs  runtime.rs  schedule.rs  scheduler.rs  state_path.rs  types.rs  worker.rs
src/daemon/commands/: mod.rs  tests.rs
src/mcp/: helpers.rs  mod.rs  params.rs  server.rs
src/vendors/: http.rs  mod.rs  runtime.rs
testing/: README.md  config.toml.example  docker-compose.yml
tests/: client_tests.rs  cloudflare_client_tests.rs  mcp_resolve_tests.rs  pangolin_client_tests.rs  pihole_client_tests.rs  unifi_client_tests.rs
(+123 files in other folders)
