[package]
name = "technitium-dns-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for Technitium DNS Server"

[[bin]]
name = "dns"
path = "src/main.rs"

[lib]
name = "dnslib"
path = "src/lib.rs"

[features]
default = ["technitium"]
technitium = ["dep:reqwest"]

[dependencies]
rmcp = { version = "1.6", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "multipart", "form", "query"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
clap = { version = "4", features = ["derive", "env"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rstest = "0.26"
mockito = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
